changed logo, updated app.json

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "Stripe Payments Demo",
+  "name": "Hays Stanford",
   "description":
     "Sample store accepting universal payments on the web with Stripe Elements, Payment Request, Apple Pay, Google Pay, and the Sources API.",
   "repository": "https://github.com/stripe/stripe-payments-demo",
-  "logo": "https://stripe-payments-demo.appspot.com/images/logo.png",
+  "logo": "https://haysstanfordpay.herokuapp.com/images/logo.png",
   "keywords": [
     "stripe",
     "stripe-elements",
